--- a/app/src/main/res/layout/home_fragment_main.xml
+++ b/app/src/main/res/layout/home_fragment_main.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="hva.groepje12.quitsmokinghabits.ui.fragment.HomeFragment">
+    tools:context="hva.groepje12.quitsmokinghabits.ui.activity.MainActivity">
 
     <TextView
         android:id="@+id/welcomeTextView"
