Added stop date in RegisterActivity

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -163,7 +163,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <TextView
+            <TextView
                     android:id="@+id/euroSign"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -206,8 +206,27 @@
 
                 </android.support.design.widget.TextInputLayout>
 
-
             </RelativeLayout>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+            <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                <EditText
+                    android:id="@+id/stopDate"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:ems="10"
+                    android:hint="Gewenste stop datum"
+                    android:inputType="date"
+                    android:onClick="datePicker" />
+                </android.support.design.widget.TextInputLayout>
+
+        </RelativeLayout>
 
             <Button
                 android:id="@+id/button_create_account"
