--- a/app/src/main/res/layout/alarms_fragment_main.xml
+++ b/app/src/main/res/layout/alarms_fragment_main.xml
@@ -38,7 +38,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/addLocationButton"
-        android:text="Voeg Huidige locatie toe" />
+        android:text="Bekijk al mijn locaties" />
 
     <View
         android:id="@+id/horizontalRule3"
