--- a/app/src/main/res/layout/activity_google_maps.xml
+++ b/app/src/main/res/layout/activity_google_maps.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/layout">
+    android:layout_height="match_parent">
 
     <fragment
         android:id="@+id/map"
@@ -15,20 +15,52 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/map"
-        android:text="Verwijder aangeklikte locatie" />
+        android:layout_marginTop="10dp"
+        android:text="Verwijder aangeklikte locatie"
+        android:visibility="invisible" />
 
     <TextView
         android:id="@+id/informationTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Als je de aangeklikte locatie wilt koppelen aan tijden, dan kan dat hier! Als je dat niet doet gaat hij altijd af wanneer jij hier bent."
+        android:layout_below="@id/removeLocationButton"
+        android:layout_marginBottom="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:text="Klik op een locatie om deze aan te passen of te verwijderen. Je kan ook locaties toevoegen door op de plek te klikken!"
         android:textAlignment="center"
-        android:layout_below="@id/removeLocationButton"/>
+        android:textSize="20dp" />
+
+    <Button
+        android:id="@+id/linkTimesButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/informationTextView"
+        android:layout_marginTop="10dp"
+        android:text="Tijden Koppelen"
+        android:visibility="invisible" />
+
+    <TextView
+        android:id="@+id/timesInformationTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/removeLocationButton"
+        android:layout_marginBottom="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:text="Wij houden rekening met een speling van 20 minuten! Als jij dus 10:00 uur kiest, kan de notificatie tussen 9:50 en 10:10 binnenkomen!"
+        android:textAlignment="center"
+        android:textSize="20dp"
+        android:visibility="invisible" />
 
     <ListView
+        android:id="@+id/datesListView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/informationTextView"/>
+        android:layout_below="@id/timesInformationTextView"
+        android:visibility="invisible" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/mapsFab"
@@ -37,5 +69,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_margin="@dimen/fab_margin"
-        android:src="@drawable/alarm_add_white" />
+        android:src="@drawable/alarm_add_white"
+        android:visibility="invisible" />
+
 </RelativeLayout>
