--- a/app/src/main/res/layout/alarms_fragment_main.xml
+++ b/app/src/main/res/layout/alarms_fragment_main.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
-        android:text="Alle tijden die jij hier registreert zullen gebruikt worden om notificaties naar jou te sturen, zodat we jou kunnen afleiden op de momenten dat jij normaal zou roken."
+        android:text="Alle tijden die jij hier registreert zullen gebruikt worden om melding naar jou te sturen, zodat we jou kunnen afleiden op de momenten dat jij normaal zou roken."
         android:textAlignment="center"
         android:textSize="16sp" />
 
@@ -73,5 +73,4 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/horizontalRule2" />
-
 </RelativeLayout>
