--- a/app/src/main/res/layout/alarms_fragment_main.xml
+++ b/app/src/main/res/layout/alarms_fragment_main.xml
@@ -12,13 +12,12 @@
         android:id="@+id/alarm_info"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:text="Alle tijden die jij hier registreert zullen gebruikt worden om melding naar jou te sturen, zodat we jou kunnen afleiden op de momenten dat jij normaal zou roken."
+        android:text="Stel hier je tijden en locaties in! Klik op onderstaande knoppen om direct jou huidige tuid, locatie of de combinatie hiervan op te slaan. Op deze momenten zal je dan een notificatie krijgen om afgeleid te worden!"
         android:textAlignment="center"
         android:textSize="16sp" />
 
     <View
-        android:id="@+id/horizontalRule1"
+        android:id="@+id/horizontalRule4"
         android:layout_width="fill_parent"
         android:layout_height="1dp"
         android:layout_below="@id/alarm_info"
@@ -26,12 +25,34 @@
         android:layout_marginTop="10dp"
         android:background="?android:attr/dividerHorizontal" />
 
+    <android.support.v7.widget.LinearLayoutCompat
+        android:id="@+id/quickAddLinearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/horizontalRule4"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/addNowLocationButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Huidige Locatie" />
+
+        <Button
+            android:id="@+id/addNowTimeAndLocationButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Huidige Locatie met tijd" />
+    </android.support.v7.widget.LinearLayoutCompat>
+
     <Button
         android:id="@+id/startMaps"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/horizontalRule1"
-        android:text="Bekijk al mijn locaties" />
+        android:layout_below="@id/quickAddLinearLayout"
+        android:text="Handmatig Locaties toevoegen en wijzigen" />
 
     <View
         android:id="@+id/horizontalRule3"
@@ -46,11 +67,12 @@
         android:id="@+id/section_label"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/horizontalRule3"
-        android:text="Ingesteld Tijden"
+        android:text="Ingestelde Momenten"
         android:textAlignment="center"
         android:textSize="20sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:layout_below="@+id/horizontalRule3"
+        android:layout_alignParentStart="true" />
 
     <View
         android:id="@+id/horizontalRule2"
