--- a/app/src/main/res/layout/home_fragment_main.xml
+++ b/app/src/main/res/layout/home_fragment_main.xml
@@ -15,8 +15,8 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:gravity="center"
-        android:text="Welkom "
-        android:textSize="30sp" />
+        android:text="Statistieken van vandaag"
+        android:textSize="25sp" />
 
     <View
         android:id="@+id/horizontalRule1"
@@ -37,7 +37,7 @@
         android:orientation="horizontal">
 
         <android.support.v7.widget.CardView
-            android:id="@+id/card_timeSinceLastCigarette"
+            android:id="@+id/timeSinceLastCigaretteCard"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -50,17 +50,17 @@
                 android:layout_height="fill_parent">
 
                 <ImageView
-                    android:id="@+id/img_time"
+                    android:id="@+id/timeImageView"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_centerHorizontal="true"
                     android:src="@drawable/timer_black" />
 
                 <TextView
-                    android:id="@+id/tv_timeNotSmoked"
+                    android:id="@+id/timeNotSmokedTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/img_time"
+                    android:layout_below="@+id/timeImageView"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="5dp"
                     android:text="00:00"
@@ -68,20 +68,19 @@
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/timeSinceLastCigaretteDesc"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/tv_timeNotSmoked"
+                    android:layout_below="@+id/timeNotSmokedTextView"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="2dp"
-                    android:text="Niet Gerookt"
+                    android:text="Uur Niet Gerookt"
                     android:textSize="12sp" />
             </RelativeLayout>
         </android.support.v7.widget.CardView>
 
 
         <android.support.v7.widget.CardView
-            android:id="@+id/card_cigarettesNotSmokedToday"
+            android:id="@+id/cigarettesNotSmokedTodayCard"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -94,17 +93,17 @@
                 android:layout_height="fill_parent">
 
                 <ImageView
-                    android:id="@+id/img_nocig"
+                    android:id="@+id/noCigarettesImageView"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_centerHorizontal="true"
                     android:src="@drawable/smoke_free_black" />
 
                 <TextView
-                    android:id="@+id/tv_cigarettesNotSmokedToday"
+                    android:id="@+id/cigarettesNotSmokedTodayTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/img_nocig"
+                    android:layout_below="@+id/noCigarettesImageView"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="5dp"
                     android:text="Geen Data"
@@ -113,10 +112,9 @@
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/cigarettesNotTodayDescription"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/tv_cigarettesNotSmokedToday"
+                    android:layout_below="@+id/cigarettesNotSmokedTodayTextView"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="2dp"
                     android:text="Sigaretten Bespaard"
@@ -232,68 +230,36 @@
         android:background="?android:attr/dividerHorizontal" />
 
     <TextView
-        android:id="@+id/onderDeLijnTextView"
+        android:id="@+id/howAreWeDoingTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/horizontalRule"
-        android:text="Zorg dat je op of onder de rode lijn blijft om je doel te behalen!"
-        android:layout_marginBottom="10dp"
         android:textAlignment="center"
-        android:textSize="17dp" />
-
-    <org.eazegraph.lib.charts.ValueLineChart xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/smokeChart"
-        android:layout_width="match_parent"
-        android:layout_height="140dp"
-        android:layout_below="@id/onderDeLijnTextView"
-        app:egIndicatorLineColor="#FE6DA8"
-        app:egLegendHeight="40dp" />
-
+        android:textSize="25dp"
+        android:text="Haal ik mijn doelen?"/>
 
     <View
-        android:id="@+id/horizontalRule2"
+        android:id="@+id/horizontalRule3"
         android:layout_width="fill_parent"
         android:layout_height="1dp"
-        android:layout_below="@+id/smokeChart"
+        android:layout_below="@+id/howAreWeDoingTextView"
         android:layout_marginBottom="10dp"
         android:layout_marginTop="10dp"
         android:background="?android:attr/dividerHorizontal" />
 
     <TextView
-        android:id="@+id/quickAddTextView"
+        android:id="@+id/onderDeLijnTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/horizontalRule2"
-        android:text="Klik op onderstaande knoppen om je huidige locatie, tijd of de combinatie ervan op te slaan!"
-        android:textSize="15dp"
-        android:textAlignment="center" />
+        android:layout_below="@id/horizontalRule3"
+        android:text="Zorg dat je op of onder de groene lijn blijft om je stop datum te behalen!"
+        android:layout_marginBottom="10dp"
+        android:textAlignment="center"
+        android:textSize="17dp" />
 
-    <android.support.v7.widget.LinearLayoutCompat
-        android:id="@+id/quickAddLinearLayout"
+    <com.github.mikephil.charting.charts.LineChart
+        android:id="@+id/smokeChart"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/quickAddTextView"
-        android:gravity="center">
-
-        <Button
-            android:id="@+id/addNowTimeButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="Tijd" />
-
-        <Button
-            android:id="@+id/addNowLocationButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="Locatie" />
-
-        <Button
-            android:id="@+id/addNowTimeAndLocationButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="Tijd en Locatie" />
-    </android.support.v7.widget.LinearLayoutCompat>
+        android:layout_height="140dp"
+        android:layout_below="@id/onderDeLijnTextView" />
 </RelativeLayout>
