--- a/app/src/main/res/layout/alarms_fragment_main.xml
+++ b/app/src/main/res/layout/alarms_fragment_main.xml
@@ -87,5 +87,6 @@
         android:id="@+id/list_times"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="50dp"
         android:layout_below="@+id/horizontalRule2" />
 </RelativeLayout>
